# Robotics-Aerial-Robots

./: README.md
Homework1/: README.md
Homework1/week_1/launch/: turtle_setting.launch
Homework1/week_1/src/: hw1.cpp
Homework10/: HW10.docx  Readme.md
Homework10/geometric_controller/: controller.m  quadsim.slx  trajectory.m
Homework10/geometric_controller/slprj/_jitprj/: jitEngineAccessInfo.mat  s5dBjnkNrGQ7cR4Ag6eK8sD.mat
Homework10/geometric_controller/slprj/_sfprj/EMLReport/: s5dBjnkNrGQ7cR4Ag6eK8sD.mat
Homework10/geometric_controller/slprj/_sfprj/precompile/: autoInferAccessInfo.mat
Homework10/geometric_controller/slprj/_sfprj/quadsim/: amsi_serial.mat
Homework11/: Readme.md
Homework11/hw11/src/: data.csv  kalman.cpp  kf_test.cpp
Homework2/week_2/: CMakeLists.txt  package.xml
Homework2/week_2/src/: hw2.cpp
Homework3/HW3/src/: eigen_transform.cpp
Homework5/: HW5-1.csv  HW5-2.csv  hw5_1.py  results.txt
Homework5/HW5/: CMakeLists.txt  package.xml
Homework5/HW5/src/: hw5_1.cpp  hw5_2.cpp
Homework5/HW5_2/: CMakeLists.txt  package.xml
Homework5/HW5_2/src/: hw5_2.cpp
Homework6/: Readme.md
Homework6/src/: hw6.cpp
Homework7/HW7/: CMakeLists.txt
Homework7/HW7/src/: hw7_1.cpp  hw7_2.cpp  tf_cf2.cpp
Homework9/geometric_controller/: controller.m  quadsim.slx  quadsim.slx.autosave  quadsim.slxc
Homework9/geometric_controller/slprj/_jitprj/: s5dBjnkNrGQ7cR4Ag6eK8sD.l
Homework9/geometric_controller/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat
Homework9/geometric_controller/slprj/_sfprj/precompile/: OzcDBvuz67wd3LKSRog4HD.mat
(+5 files in other folders)
